--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>com.scivicslab</groupId>
     <artifactId>actor-IaC</artifactId>
-    <version>2.12.1</version>
+    <version>2.14.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>actor-IaC</name>
@@ -58,7 +58,7 @@
         <dependency>
             <groupId>com.scivicslab</groupId>
             <artifactId>pojo-actor</artifactId>
-            <version>2.12.1</version>
+            <version>2.14.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
